# csmap-py

./: .gitignore  README.md  pyproject.toml  sample.ipynb
.github/workflows/: lint.yml  release.yml  test.yml
csmap/: __main__.py  color.py  process.py
tests/: test_process.py
