[tool.poetry]
name = "csmap-py"
version = "0.1.0"
description = ""
authors = ["Kanahiro <mediterranean1769@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "csmap_py"}]

[tool.poetry.dependencies]
python = "^3.10"
scipy = "^1.11.4"
numpy = "^1.26.2"
gdal = {version = "3.7.0", extras = ["numpy"]}
rasterio = "^1.3.9"
matplotlib = "^3.8.2"


[tool.poetry.group.dev.dependencies]
ruff = "^0.1.6"
ipykernel = "^6.27.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
