[tool.poetry]
name = "csmap-py"
version = "0.1.0"
description = ""
authors = ["Kanahiro <mediterranean1769@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "csmap_py"}]

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^1.26.2"
rasterio = "^1.3.9"


[tool.poetry.group.dev.dependencies]
ruff = "^0.1.6"
ipykernel = "^6.27.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
