[tool.poetry]
name = "csmap-py"
version = "0.1.4"
description = ""
authors = ["MIERUNE Inc. <info@mierune.co.jp>"]
license = "MIT"
readme = "README.md"
packages = [{include = "csmap"}]

[tool.poetry.scripts]
csmap = "csmap.__main__:main"

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^1.26.2"
rasterio = "^1.3.9"


[tool.poetry.group.dev.dependencies]
ruff = "^0.1.6"
pytest = "^7.4.3"
pytest-cov = "^4.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
